# QTUIPractise

practise-1/BasicQTPractise/: CMakeLists.txt  main.cpp
practise-1/BasicQTPractise/assets/: asset.qrc
practise-1/build-BasicQTPractise-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  appbasicqtpractise_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
practise-1/build-BasicQTPractise-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
practise-1/build-BasicQTPractise-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qt/deploy_qml_imports/: appBasicQTPractise.cmake
practise-1/build-BasicQTPractise-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appBasicQTPractise.cmake  Qt6_QmlPlugins_Imports_appBasicQTPractise.rsp
practise-1/build-BasicQTPractise-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
practise-1/build-BasicQTPractise-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.rcc/: appBasicQTPractise_raw_qml_0.qrc  qmake_BasicQTPractise.qrc  qrc_appBasicQTPractise_raw_qml_0.cpp  qrc_qmake_BasicQTPractise.cpp
practise-1/build-BasicQTPractise-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.rcc/qmllint/: appBasicQTPractise.rsp  (+2 more)
practise-1/build-BasicQTPractise-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/BasicQTPractise/: Main.qml  appBasicQTPractise_qml_module_dir_map.qrc  qmldir
practise-1/build-BasicQTPractise-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/appBasicQTPractise_autogen/: deps
practise-1/build-BasicQTPractise-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/qmltypes/: appBasicQTPractise_foreign_types.txt
(+405 files in other folders)
